# ImageProcessing

./: .gitignore  LICENSE  README.md  main.cpp
src/: CMakeLists.txt  processing.cpp  processing.h
